src/objects/Authorized_Signatory__c.object
<CustomObject>
    <description>Represents an authorized contact for an Account.</description>
    <fields>
        <fullName>ASP_Effective_Date__c</fullName>
        <description>This represents the last date when a new attachment was added to the Authorized Signatory Package record.</description>
        <label>ASP Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attachment_Link__c</fullName>
        <description>This is a link to the last non-image attachment. If there are more than 1 non-image attachment, this will link to the most recently added.</description>
        <formula>IF (
  NOT( ISBLANK(Last_Attachment_Id__c) ),
  HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; + Last_Attachment_Id__c, &quot;View / Download&quot;),
  &quot;No document attached&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attachment Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Signatories_Package__c</fullName>
        <label>Authorized Signatories Package</label>
        <referenceTo>Authorized_Signatories_Package__c</referenceTo>
        <relationshipLabel>Authorized Signatories</relationshipLabel>
        <relationshipName>Authorized_Signatories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Airline Headquarters, Airline Branch</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Authorized Signatories</relationshipLabel>
        <relationshipName>Authorized_Signatories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image_Attachment_Id__c</fullName>
        <description>The Id of the last image attachment, to be used to display the signature preview.</description>
        <label>Image Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Attachment_Id__c</fullName>
        <description>This is the Id of the most recently added non-image attachment.</description>
        <label>Last Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Snapshot__c</fullName>
        <formula>IF (
  NOT( ISBLANK(Image_Attachment_Id__c ) ),
  IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos; +  Image_Attachment_Id__c , &apos;No preview available&apos;, 50, 50),
  &apos;No preview available&apos;
)</formula>
        <label>Signature Snapshot</label>
        <type>Text</type>
    </fields>
    <label>Authorized Signatory</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Authorized Signatory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized Signatories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>